--- a/vsthemes-org_17928-chino-kafuu-s-chashkoj-kofe.theme.css
+++ b/vsthemes-org_17928-chino-kafuu-s-chashkoj-kofe.theme.css
@@ -7,13 +7,13 @@
 
 /* Rem Main Picture */
 .app-2CXKsg {
-    background-image: linear-gradient(30deg, rgba(0,0,0,.4), rgba(0,0,0,.5)), url(https://github.com/MiloKafuuChino/theme/blob/c6b352626b50151e1ed9711051a7f6b192dc9ed9/863573.png);
+    background-image: linear-gradient(30deg, rgba(0,0,0,.4), rgba(0,0,0,.5)), url(https://images3.alphacoders.com/863/863573.png);
     background-size: cover;
 }
 
 /* Picture for Discord/BetterDiscord settings */
 .standardSidebarView-E9Pc3j {
-    background-image: linear-gradient(30deg, rgba(0,0,0,.8), rgba(0,0,0,.5)), url(https://github.com/MiloKafuuChino/theme/blob/c6b352626b50151e1ed9711051a7f6b192dc9ed9/863573.png);
+    background-image: linear-gradient(30deg, rgba(0,0,0,.8), rgba(0,0,0,.5)), url(https://images3.alphacoders.com/863/863573.png);
     background-size: cover;
 }
 
