--- a/vsthemes-org_17928-chino-kafuu-s-chashkoj-kofe.theme.css
+++ b/vsthemes-org_17928-chino-kafuu-s-chashkoj-kofe.theme.css
@@ -261,7 +261,7 @@
 .userProfileInnerThemedWithBanner-2624Yx,
 .userProfileInnerThemedNonPremium-1gT-zY,
 .userProfileInnerThemedPremiumWithoutBanner-1yMS1H {
-    background: url(https://images5.alphacoders.com/734/734070.png) 50%/cover;
+    background: url(https://images2.alphacoders.com/124/1243700.jpg) 50%/cover;
 }
 
 .userProfileOuterUnthemed-2b2rsv,
