chino-kafuu.theme.css

--- a/vsthemes-org_17928-chino-kafuu-s-chashkoj-kofe.theme.css
+++ b/vsthemes-org_17928-chino-kafuu-s-chashkoj-kofe.theme.css
@@ -261,7 +261,7 @@
 .userProfileInnerThemedWithBanner-25XGmz,
 .userProfileInnerThemedNonPremium-2AJg-H,
 .userProfileInnerThemedPremiumWithoutBanner-lZ9inp {
-    background: url(https://images5.alphacoders.com/734/734070.png) 50%/cover;
+    background: url(https://images2.alphacoders.com/124/1243700.jpg) 50%/cover;
 }
 
 .userProfileOuterUnthemed-11rPfA,
@@ -1021,8 +1021,7 @@
 }
 
 .childWrapper-1j_1ub {
-    background-color: rgba(108, 180, 254, .7);
-    color: white;
+    background: url('https://images5.alphacoders.com/119/1197424.jpg');
 }
 
 .wrapper-3kah-n.selected-1Drb7Z .childWrapper-1j_1ub, 
