--- a/milo-chino-kafuu.theme.css
+++ b/milo-chino-kafuu.theme.css
@@ -1026,8 +1026,7 @@
 
 .wrapper-3kah-n.selected-1Drb7Z .childWrapper-1j_1ub, 
 .wrapper-3kah-n:hover .childWrapper-1j_1ub {
-    color: white;
-    background-color: #6cb4fe;
+    background: url('https://images5.alphacoders.com/119/1197424.jpg');
 }
 
 .iconBadge-32fMme {
