--- a/milo-chino-kafuu.theme.css
+++ b/milo-chino-kafuu.theme.css
@@ -1,11 +1,10 @@
 /**
- * @name Team Rem
- * @author ShadowDevilsAvenged
- * @description Team Rem is back once again(big request to bring this back)
+ * @name Kafuu Chino
+ * @author Milo
  * @version 2.9
 */
 
-/* Rem Main Picture */
+/* KafuuChino Main Picture */
 .app-2CXKsg {
     background-image: linear-gradient(30deg, rgba(0,0,0,.4), rgba(0,0,0,.5)), url(https://images3.alphacoders.com/863/863573.png);
     background-size: cover;
@@ -13,7 +12,7 @@
 
 /* Picture for Discord/BetterDiscord settings */
 .standardSidebarView-E9Pc3j {
-    background-image: linear-gradient(30deg, rgba(0,0,0,.8), rgba(0,0,0,.5)), url(https://images2.alphacoders.com/124/1243700.jpg);
+    background-image: linear-gradient(30deg, rgba(0,0,0,.8), rgba(0,0,0,.5)), url(https://images3.alphacoders.com/863/863573.png);
     background-size: cover;
 }
 
