--- a/milo-chino-kafuu.theme.css
+++ b/milo-chino-kafuu.theme.css
@@ -11,7 +11,7 @@
  * @BDEditor Frosted Glass
 */
 
-@import url('https://discordstyles.github.io/FrostedGlass/dist/FrostedGlass.css');
+@import url(https://clearvision.github.io/ClearVision-v6/main.css);
 
 :root {
   --background-image: url('https://i.imgur.com/8X0ZCfA.png');
